# TrajectoryOptimizer

./: CMakeLists.txt  README.md  main.cpp  start_planning.sh
case/ms5_case/demo4_obstacle/AITownReconstructed_V0103_200518/barrier/: case.json
case/ms5_case/demo4_obstacle/AITownReconstructed_V0103_200518/cone/: case.json
case/ms5_case/demo4_obstacle/AITownReconstructed_V0103_200518/other/: case.json
case/ms5_case/demo_falling_1111/AITownReconstructed_V0103_200518/only_testee/: anchor_segment.json  case.json
case/ms5_case/demo_only_testee_1027/AITownReconstructed_V0103_200518/only_testee/: case.json
case/ms5_case/demo_only_testee_1029/AITownReconstructed_V0103_200518/only_testee/: case.json
case/ms5_case/empty_scene/EmptyScene/only_testee/: anchor_segment.json  case.json
case/ms5_case/testA/AITownReconstructed_V0103_200518/test001/: case.json
case/ms5_case/testA/AITownReconstructed_V0103_200518/test003/: case.json
case/ms5_case/testA/AITownReconstructed_V0103_200518/test004/: case.json
case/ms5_case/testA/AITownReconstructed_V0103_200518/test005/: case.json
case/ms5_case/testB/AITownReconstructed_V0103_200518/test002/: case.json
case/ms5_case/testB/AITownReconstructed_V0103_200518/test003/: case.json
case/ms5_case/testC/AITownReconstructed_V0103_200518/test001/: case.json
case/ms5_case/testC/AITownReconstructed_V0103_200518/test002/: case.json
case/ms5_case/testD/AITownReconstructed_V0103_200518/test001/: case.json
case/ms5_case/testD/AITownReconstructed_V0103_200518/test002/: case.json
case/ms5_case/testD/AITownReconstructed_V0103_200518/test003/: case.json
case/ms5_case/test_map/AITownReconstructed_V0103_200518/apollo_only/: case.json
case/ms5_case/testbb/AITownReconstructed_V0103_200518/testB001/: case.json
case/ms5_case/testbb/AITownReconstructed_V0103_200518/testB002/: case.json
case/ms5_case/testbb/AITownReconstructed_V0103_200518/testB003/: case.json
case/ms5_case/testbb/AITownReconstructed_V0103_200518/testB004/: case.json
case/testA/AITownReconstructed_V0103_200518/test001/: anchor_segment.json
case/testA/AITownReconstructed_V0103_200518/test002/: case.json
case/testA/AITownReconstructed_V0103_200518/test006/: case.json
case/testA/AITownReconstructed_V0103_200518/test007/: case.json
cfg/: adapter_params.conf  channel_config_testee.ini  common_config.ini
data/: calibration_array.txt
scripts/: l2krls.py
src/common/: CMakeLists.txt  adapter_gflags.cc  adapter_gflags.h  header.h  planning_struct.h  st_graph_point.cpp  st_graph_point.h
src/controller/: CMakeLists.txt  controller.cpp  controller.h  pid_controller.cpp  pid_controller.h
src/target_generator/: CMakeLists.txt  local_target_generator.cpp  local_target_generator.h
src/trajectory_optimizer/: CMakeLists.txt  cartesian_frenet_transform.cpp  cartesian_frenet_transform.h  cubic_bezier_curve.cpp  cubic_bezier_curve.h  obstacle_decider.cpp  obstacle_decider.h  optimizer_problem.cpp  optimizer_problem.h  path_boundary.cpp  path_boundary.h  path_optimizer_problem.cpp  path_optimizer_problem.h  path_planner.cpp  path_planner.h  planning_visualization.cpp  planning_visualization.h  speed_planner.cpp  speed_planner.h  target_line.cpp  target_line.h  trajectory_generator.cpp  trajectory_generator.h  trajectory_planner.cpp  trajectory_planner.h
